# BackupSoftwareClient

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  FileWatcher.cpp  FileWatcher.h  README.md  Socket.cpp  Socket.h  SyncedFile.cpp  SyncedFile.h  UploadJobs.cpp  UploadJobs.h  User.cpp  main.cpp
test_dir/: a.txt  abdullah.txt  b.txt
